# coucou

./: .env.example  .gitignore  LICENSE  README.md  audio_capture.py  buffer.py  capture.swift  diarize.py  encoder.py  local_transcriber.py  pyproject.toml  requirements.txt  server.py  setup.sh  test_e2e.sh  transcription_client.py  translator.py  whisper_client.py
static/: app.js  index.html  manifest.json  style.css
static/admin/: admin.css  admin.js  index.html
tests/: test_buffer.py  test_encoder.py  test_transcription_client.py  test_whisper_client.py
